Center aligned charts in print view; Moved ReportTable and added additional conditional check; Fix absolute positioning

--- a/src/css/report.styl
+++ b/src/css/report.styl
@@ -639,6 +639,11 @@ body
     right 0
     overflow hidden
     border 1px solid pink
+  
+  .analysis-modules-container
+      position absolute
+      top 100vh
+
   .analysis-area
     height 50vh
     max-height 50vh
@@ -650,33 +655,37 @@ body
       margin-top 1rem
     .analysis-area-list
       font-size 2rem
-    
-  .vega-chart-bar-container
-    margin 0 !important
-    width 50rem !important
-    
-  .vega-chart-line-container
-    margin 0 !important
-    max-width 50rem !important
-    
-  .vega-chart-bar-container > .vega-chart > canvas
-    width 50rem !important
-    
-  .vega-chart-line-container > .vega-chart > canvas
-    width 50rem !important
-    
-  .vega-chart-info
-    width 50rem !important
   
   .report-container
     height 100vh
-    //width 100vw
+    width 100vw
     border 1px solid blue
     margin 0 !important
     
+  .vega-chart-wrapper
   .vega-chart_container
     margin 0 !important
-    max-width 50rem !important
+    width 500px !important
+    margin auto !important
+    padding 0 !important
+    
+  .vega-chart-bar-container
+    margin 0 !important
+    width 500px !important
+    
+  .vega-chart-line-container
+    margin 0 !important
+    width 500px !important
+    
+  .vega-chart-bar-container > .vega-chart > canvas
+    width 500px !important
+    
+  .vega-chart-line-container > .vega-chart > canvas
+    width 500px !important
+  
+  .vega-chart-info
+    width 500px !important
+    margin 0 auto !important
   
   .report-header
     background-color #555 !important
@@ -688,7 +697,7 @@ body
         
   .vega-chart_download-container-report
     .vega-chart-label
-      margin 0 auto !important
+      margin 20px auto !important
     
   .report-header__icon-container
   .vega-chart-menu-container
